--- a/.github/workflows/tf-security.yml
+++ b/.github/workflows/tf-security.yml
@@ -5,7 +5,7 @@ on:
     paths: [ 'infra/**' ]
   push:
     branches: [ master ]
-    paths: [ 'infra/**' ]
+    # paths: [ 'infra/**' ]
 
 jobs:
   lint-secure-plan:
