--- a/.github/workflows/tf-security.yml
+++ b/.github/workflows/tf-security.yml
@@ -29,6 +29,13 @@ jobs:
           terraform_wrapper: false
           terraform_version: ~1.6
 
+      - name: Configure AWS credentials (static keys)
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id:     ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1 
+          
       - name: Terraform fmt (check)
         run: terraform fmt -check -recursive -diff
 
